chore: bigraph model-provider 1.1.5 -> 1.1.7 --- regression fixes